tests/api/reference/negative/11-replace-range.asm
const invalid: bytes = bytes.replace(b"AB", 1, 2, b"C")
